<resources>
	<string name="app_name">Photo Notes</string>
	<string name="base_api_url" translatable="false">https://vision.googleapis.com/</string>
	<string name="camera">Camera</string>
	<string name="gallery">Gallery</string>
	<string name="ok" translatable="false">OK</string>
	<string name="name">Name:</string>
	<string name="content">Content:</string>
	<string name="processing">Processing…</string>
	<string name="cancel">Cancel</string>
	<string name="all_notes">All notes</string>
	<string name="preferences">Preferences</string>
	<string name="about">About</string>
	<string name="save">Save</string>
	<string name="delete">Delete</string>
	<string name="key_lang" translatable="false">key_lang</string>
	<string name="lang_summary">Exclude languages based on the Latin alphabet</string>
	<string name="action_search">Search</string>
	<string name="error">Error</string>
	<string name="nothing_detected">Nothing detected</string>
	<string name="detect">Detect</string>
	<string name="saved_notes">Saved notes</string>
	<string name="edit_note">Edit note</string>
	<string name="about_text">Application for recognition of text from images.\nUsed Google Cloud Vision Api.</string>
	<string name="version" translatable="false">version 1.0</string>
	<string name="author_aleksei_vasilev">author: Aleksei Vasilev</string>
	<string name="photonotes_javasilev_com" translatable="false">photonotes@javasilev.com</string>
	<string name="languages">Detect languages</string>
	<string name="key_api" translatable="false">key_api</string>
	<string name="enter_key_api">Enter API key</string>
	<string name="key_api_summary">Your personal key for Google Cloud Vision API (required)</string>
	<string name="wrong_api">Wrong API key</string>
	<string name="no_entries">No entries</string>
	<string name="check_inet">Check Internet connection.</string>
	<string name="share">Share</string>
	<string name="take_photo">Take a photo or choose from gallery:</string>
	<string name="to_start_detecting">To start detecting</string>
	<string name="take_a_photo">Take a photo</string>
	<string name="or">or</string>
	<string name="choose_from_gallery">Choose from gallery</string>
	<string name="select">Select an image</string>
	<string name="open_drawer">open drawer</string>
	<string name="close_drawer">close drawer</string>
	<string name="select_languages">Select languages</string>
	<string name="permissions_are_required">Permissions are required</string>

	<string-array name="lang_entries">
		<item>Belarusian</item>
		<item>Russian</item>
		<item>Serbian</item>
		<item>Slovak</item>
		<item>Tajik</item>
		<item>Ukrainian</item>
		<item>Uzbek</item>
	</string-array>

	<string-array name="lang_defaults">
		<item>ru</item>
	</string-array>

	<string-array name="lang_values">
		<item>be</item>
		<item>ru</item>
		<item>sr</item>
		<item>sk</item>
		<item>tg</item>
		<item>uk</item>
		<item>uz</item>
	</string-array>
</resources>
