<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/activity_list_notes_menu_action_search"
		android:title="@string/action_search"
		android:icon="@drawable/ic_search_white_48dp"
		app:showAsAction="ifRoom|collapseActionView"
		app:actionViewClass="android.support.v7.widget.SearchView" />

	<item
		android:id="@+id/activity_list_notes_menu_start"
		android:title="@string/Start_OCR"
		app:showAsAction="never" />

	<item
		android:id="@+id/activity_list_notes_menu_prefs"
		android:title="@string/preferences"
		app:showAsAction="never"/>

	<item
		android:id="@+id/activity_list_notes_menu_about"
		android:title="@string/about"
		app:showAsAction="never"/>
</menu>