<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<include layout="@layout/item_actionbar" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		android:padding="@dimen/modest">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/rich"
			android:gravity="center_vertical">

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="@dimen/modest"
				android:src="@mipmap/ic_launcher" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/app_name"
				android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
		</LinearLayout>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginBottom="@dimen/rich"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/about_text"
			android:textColor="@color/textColorSecondary"
			android:textSize="18sp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/rich"
			android:gravity="center"
			android:text="@string/version"
			android:textColor="@color/textColorSecondary"
			android:textSize="16sp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/minor"
			android:gravity="center"
			android:text="@string/author_aleksei_vasilev"
			android:textColor="@color/textColorSecondary"
			android:textSize="16sp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/rich"
			android:autoLink="email"
			android:gravity="center"
			android:linksClickable="true"
			android:text="@string/photonotes_javasilev_com"
			android:textSize="16sp" />

	</LinearLayout>

</LinearLayout>