<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/activity_main"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:padding="@dimen/modest"
		tools:context="com.javasilev.photonotes.ui.MainActivity">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="@dimen/minor"
			android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
			android:text="@string/select_option" />

		<Button
			android:id="@+id/activity_main_button_camera"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/camera"/>

		<Button
			android:id="@+id/activity_main_button_gallery"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/gallery"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:orientation="vertical">

		<ProgressBar
			android:id="@+id/activity_main_progress_bar_loading"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:indeterminate="true"
			android:visibility="gone"
			tools:visibility="visible" />

		<TextView
			android:id="@+id/activity_main_text_view_progress"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@android:color/black"
			android:textSize="18sp"
			android:visibility="gone"
			tools:text="@string/processing"
			tools:visibility="visible" />

		<Button
			android:id="@+id/activity_main_button_cancel_loading"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/cancel"
			android:visibility="gone"
			tools:visibility="visible" />
	</LinearLayout>
</FrameLayout>
